<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/your_fragment_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AllFragment">
        <FrameLayout
            android:layout_width="361dp"
            android:layout_height="290dp"
            android:background="@drawable/gradient_color"
            tools:ignore="MissingConstraints">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="170dp"
                android:layout_height="150dp"
                android:layout_marginTop="105dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/f_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/s_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_name"
                    android:textColor="@color/dark_black"
                    />
                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_corner"
                    android:textSize="13sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/t1"
                    android:drawableStart="@drawable/calendar_month"
                    android:padding="5dp"
                    android:drawablePadding="5dp"
                    android:textColor="@color/blacks"
                    />
                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/textview_corner"
                    android:text="@string/t2"
                    android:drawableStart="@drawable/check_circle"
                    android:padding="5dp"
                    android:drawablePadding="5dp"
                    android:textColor="@color/blacks"
                    />
                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/textview_corner"
                    android:drawableStart="@drawable/check_circle"
                    android:padding="5dp"
                    android:drawablePadding="5dp"
                    android:text="@string/t3"
                    android:textColor="@color/blacks"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="26dp"
                android:layout_marginTop="105dp"
                android:layout_marginStart="86dp"
                android:src="@drawable/baseline_waving_hand_24"
                />
            <SearchView
                android:id="@+id/search_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:queryHint="Search"
                android:queryBackground="@drawable/custom">
            </SearchView>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="290dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/img_saly10"
                />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="290dp">
            <TextView
                android:id="@+id/task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_task"
                android:background="@color/white"
                android:textSize="28dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textColor="@color/blacks"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                tools:listitem="@layout/row_all_list"
                />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
